# wiki-actor

./: .gitignore  EDITOR_DEFAULT  LICENSE  STATIC  app.py  config.json  generate.py  pyproject.toml  readme.md  response.py  snippets.py
docs/articles/: Main.article  found_mistake.article  my_article.article
generator/: __init__.py  generator.py  transformations.py
templates/: editor.html  index.html  redirect.html
